2021-08-31  Jonathan Bedard  <jbedard@apple.com>

        [contributors.json] Replace class=bot with status=bot
        https://bugs.webkit.org/show_bug.cgi?id=229712
        <rdar://problem/82579767>

        Reviewed by Aakash Jain.

        * wp-content/themes/webkit/team.php: "bot" is now a status, not a class.

2021-02-17  Ling Ho  <lingho@apple.com>

        WebKit nighly archives page not working for Big Sur
        https://bugs.webkit.org/show_bug.cgi?id=222016
        <rdar://problem/74037376>

        Reviewed by Alexey Proskuryakov.

        * wp-content/themes/webkit/build-archives.php:

2021-02-11  Martin Robinson  <mrobinson@igalia.com>

        scroll-snap demo should use new spec
        https://bugs.webkit.org/show_bug.cgi?id=184046

        Reviewed by Wenson Hsieh.

        Update the scroll-snap demo to reflect the modern specification. This
        demo isn't currently linked from the site, but if it's every linked again
        it will now reflect the current specification.

        This maintains the old CSS so that the demo continues to work with
        old versions of Safari.

        * demos/scroll-snap/index.html: Update the descriptions in the demo to reflect
        the newest version of the specification.

2021-01-29  Beth Dakin  <bdakin@apple.com>

        Remove non-inclusive language from webkit.org/blog-files/css-jit-introduction/html5-single-page-microbenchmark.html
        https://bugs.webkit.org/show_bug.cgi?id=221154

        Reviewed by Geoffrey Garen.

        * blog-files/css-jit-introduction/html5-single-page-microbenchmark.html:

2021-01-05  Jon Davis  <jond@apple.com>

        Limit failed login attempts on webkit.org blog
        https://bugs.webkit.org/show_bug.cgi?id=220032

        Reviewed by Timothy Hatcher.

        * wp-content/plugins/limit-logins.php: Added.

2021-01-05  Jon Davis  <jond@apple.com>

        Disable public APIs on webkit.org blog
        https://bugs.webkit.org/show_bug.cgi?id=220028
