@@ -1,3 +1,15 @@
+2021-09-02  Jonathan Bedard  <jbedard@apple.com>
+
+        [contributors.json] Relocation (Part 3)
+        https://bugs.webkit.org/show_bug.cgi?id=229690
+        <rdar://problem/82552403>
+
+        Reviewed by Aakash Jain.
+
+        * commit-review.md: Link to metadata/contributors.json.
+        * wp-content/themes/webkit/team.php: Load from metadata/contributors.json,
+        load list instead of dictionary.
+
 2021-08-31  Jonathan Bedard  <jbedard@apple.com>
 
         [contributors.json] Replace class=bot with status=bot
